# coles-mcp

./: .gitignore  FINAL_STATUS.md  README.md  STATUS.md  accessibility_extractor.py  diagnose_api.py  diagnose_page.py  extract_prices_final.py  fix_price_extraction.py  pyproject.toml  search_items.py  simple_text_extractor.py  test_live.py  use_locators.py  wait_for_react.py
.claude/: evidence-metrics.json  evidence-trail.jsonl  ralph-loop.local.md
.github/workflows/: ci.yml
config/: coles.yaml
examples/: basic_usage.py  benchmark.py  test_demo_mode.py
scripts/: debug_homepage.py  debug_url.py  discover_and_test.py  inspect_dom.py  inspect_request.py  monitor_network.py  real_search_monitor.py  systematic_test.py  test_api_direct.py  test_bff.py  test_bff_search.py  test_browser_automation.py  test_captured_endpoint.py  test_cdp_session.py  test_demo_mode.py  test_dom_parsing.py  test_endpoints.py  test_fetch_url.py  test_filter_formats.py  test_response_content.py  test_subscriptions.py  test_via_cdp.py  test_with_incapsula.py  test_with_navigation.py
session-context/: CLAUDE-activeContext.md  CLAUDE-soul-purpose.md
src/coles_mcp/: __init__.py  anti_detection.py  api.py  browser.py  browser_tools.py  config.py  demo_mode.py  dom_parser.py  logger.py  models.py  parsers.py  server.py
tests/: __init__.py  conftest.py  test_edge_cases.py  test_integration.py  test_models.py  test_parser_edge_cases.py  test_parsers.py  test_server.py
